[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://dynamicfont.tres" type="DynamicFont" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Next" type="Button" parent="."]
margin_left = 878.568
margin_top = 345.477
margin_right = 1005.57
margin_bottom = 408.477
rect_pivot_offset = Vector2( 89.432, 62.523 )
custom_fonts/font = ExtResource( 2 )
text = "次へ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="."]
margin_left = 16.0
margin_top = 350.0
margin_right = 143.002
margin_bottom = 413.0
rect_pivot_offset = Vector2( 89.432, 62.523 )
custom_fonts/font = ExtResource( 2 )
text = "戻る"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialog" type="RichTextLabel" parent="."]
margin_left = 21.3892
margin_top = 420.146
margin_right = 998.389
margin_bottom = 588.146
custom_fonts/normal_font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 192.056
margin_top = 117.944
margin_right = 797.056
margin_bottom = 169.944
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 192.056
margin_top = 240.101
margin_right = 797.056
margin_bottom = 292.101
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextSE" type="AudioStreamPlayer2D" parent="."]
volume_db = 24.0

[connection signal="button_down" from="Next" to="." method="_on_Next_button_down"]
[connection signal="button_down" from="Prev" to="." method="_on_Prev_button_down"]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
